--- a/khoBlog/templates/tailwind/menu.html
+++ b/khoBlog/templates/tailwind/menu.html
@@ -10,10 +10,8 @@
           <img class="h-8 w-auto sm:h-10" width="2.5rem" height="2.5rem" src="{% static 'khoBlog/img/RuthinkkTooBig.webp' %}" alt="Khodok's Logo">
         </a>
       </div>
-      {% comment %} share data between the two dark mode buttons {% endcomment %}
-      {% comment %} <button onclick="toggleDarkMode()" type="button" class="md:hidden inline-flex ml-auto mr-2 flex-shrink-0 h-6 w-11 border-2 border-transparent rounded-full cursor-pointer transition-colors ease-in-out duration-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 bg-gray-200" x-data="{ dark: false }" role="switch" @click="dark = !dark" x-state:on="Enabled" x-state:off="Not Enabled" :class="{ 'bg-indigo-600': dark, 'bg-gray-200': !(dark) }">
-        <span aria-hidden="true" class="pointer-events-none inline-block h-5 w-5 rounded-full bg-white shadow transform ring-0 transition ease-in-out duration-200 translate-x-0" x-state:on="Enabled" x-state:off="Not Enabled" :class="{ 'translate-x-5': dark, 'translate-x-0': !(dark) }"></span>
-      </button> {% endcomment %}
+      <input type="checkbox" name="" id="darkLight" class="switch md:hidden flex ml-auto mr-2 h-6 w-11 border-2 border-transparent rounded-full cursor-pointer transition-colors ease-in-out duration-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 bg-gray-200" />
+      <label for="darkLight" class="cursor-pointer"></label>
       <div class="-mr-2 -my-2 md:hidden">
         <button type="button" class="bg-white dark:bg-zinc-800 rounded-md p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500" @click="toggle" @mousedown="if (open) $event.preventDefault()" aria-expanded="true" :aria-expanded="open.toString()">
           <span class="sr-only">Open menu</span>
