--- a/khoBlog/templates/tailwind/base.html
+++ b/khoBlog/templates/tailwind/base.html
@@ -126,12 +126,16 @@
 
     {% include 'tailwind/menu.html' %}
 
-    <main class="bg-white dark:bg-zinc-800 pt-8 pb-12 px-4 sm:px-6 lg:pt-16 lg:pb-20 lg:px-8">
-      <input type="checkbox" name="" id="darkLight" class="switch hidden md:flex ml-auto -mr-2 lg:-mr-4 -mt-6 lg:-mt-14 h-6 w-11 border-2 border-transparent rounded-full cursor-pointer transition-colors ease-in-out duration-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 bg-gray-200" />
-      <label for="darkLight" class="cursor-pointer"></label>
+    <main class="bg-white dark:bg-zinc-800 pt-8 pb-12 lg:pt-16 lg:pb-20">
+      <section class="max-w-7xl mx-auto flex justify-end px-4 2xl:px-0">
+        <input type="checkbox" name="" id="darkLightd" class="switch hidden md:flex -mt-6 lg:-mt-14 h-6 w-11 border-2 border-transparent rounded-full cursor-pointer transition-colors ease-in-out duration-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 bg-gray-200" />
+        <label for="darkLightd" class="cursor-pointer sr-only"></label>
+      </section>
 
-      {% block content %}
-      {% endblock content %}
+      <section class="px-4 sm:px-6 lg:px-8">
+        {% block content %}
+        {% endblock content %}
+      </section>
     </main>
 
     <footer class="bg-white/75 dark:bg-zinc-800/95">
