--- a/khoBlog/templates/tailwind/cards.html
+++ b/khoBlog/templates/tailwind/cards.html
@@ -36,7 +36,7 @@
   </section>
   <section class="mt-3">
     <a href="{{ object.get_absolute_url }}" class="text-base font-semibold text-indigo-600 hover:text-indigo-500">
-      Read more
+      Read the post
     </a>
   </section>
 </article>
