--- a/khoBlog/templates/tailwind/menu.html
+++ b/khoBlog/templates/tailwind/menu.html
@@ -10,8 +10,8 @@
           <img class="h-8 w-auto sm:h-10" width="2.5rem" height="2.5rem" src="{% static 'khoBlog/img/RuthinkkTooBig.webp' %}" alt="Khodok's Logo">
         </a>
       </div>
-      <input type="checkbox" name="" id="darkLight" class="switch md:hidden flex ml-auto mr-2 h-6 w-11 border-2 border-transparent rounded-full cursor-pointer transition-colors ease-in-out duration-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 bg-gray-200" />
-      <label for="darkLight" class="cursor-pointer"></label>
+      <input type="checkbox" name="" id="darkLightm" class="switch md:hidden flex ml-auto mr-2 h-6 w-11 border-2 border-transparent rounded-full cursor-pointer transition-colors ease-in-out duration-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 bg-gray-200" />
+      <label for="darkLightm" class="cursor-pointer sr-only"></label>
       <div class="-mr-2 -my-2 md:hidden">
         <button type="button" class="bg-white dark:bg-zinc-800 rounded-md p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500" @click="toggle" @mousedown="if (open) $event.preventDefault()" aria-expanded="true" :aria-expanded="open.toString()">
           <span class="sr-only">Open menu</span>
