--- a/khoBlog/templates/tailwind/links_list_n.html
+++ b/khoBlog/templates/tailwind/links_list_n.html
@@ -1,6 +1,6 @@
 {% for url in urls %}
   <li class="flow-root">
-    <a href="{% if url.index %}{% firstof url.permalink url.content_object.get_index_view_url %}{% else %}{% firstof url.content_object.get_absolute_url url.get_content_object_url %}{% endif %}" class="-m-3 p-3 flex items-center rounded-md text-base font-medium text-gray-900 hover:bg-gray-50 transition ease-in-out duration-150">
+    <a href="{% if url.index %}{% firstof url.permalink url.content_object.get_index_view_url %}{% else %}{% firstof url.content_object.get_absolute_url url.get_content_object_url %}{% endif %}" class="-m-3 p-3 flex items-center rounded-md text-base font-medium text-gray-900 dark:text-gray-200 hover:bg-gray-50 dark:hover:bg-gray-700 transition ease-in-out duration-150">
       <span>{% firstof url.featured_title url.title %}</span>
     </a>
   </li>
