--- a/khoBlog/templates/tailwind/menu_flyout.html
+++ b/khoBlog/templates/tailwind/menu_flyout.html
@@ -1,7 +1,7 @@
 {% load display %}
 
 <div x-data="Components.popover({ open: false, focus: false })" x-init="init()" @keydown.escape="onEscape" @close-popover-group.window="onClosePopoverGroup">
-  <button type="button" x-state:on="Item active" x-state:off="Item inactive" class="group bg-white dark:bg-zinc-800 rounded-md inline-flex items-center text-base font-medium hover:text-gray-900 dark:hover:text-gray-100 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 text-gray-500" :class="{ 'text-gray-900': open, 'text-gray-500': !(open) }" @click="toggle" @mousedown="if (open) $event.preventDefault()" aria-expanded="false" :aria-expanded="open.toString()">
+  <button type="button" x-state:on="Item active" x-state:off="Item inactive" class="group flyout_button" :class="{ 'text-gray-900 dark:text-gray-300': open, 'text-gray-500': !(open) }" @click="toggle" @mousedown="if (open) $event.preventDefault()" aria-expanded="false" :aria-expanded="open.toString()">
     <span>Menu</span>
     <svg x-state:on="Item active" x-state:off="Item inactive" class="ml-2 h-5 w-5 group-hover:text-gray-500 text-gray-400" :class="{ 'text-gray-600': open, 'text-gray-400': !(open) }" x-description="Heroicon name: solid/chevron-down" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 20 20" fill="currentColor" aria-hidden="true">
       <path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd"></path>
@@ -14,11 +14,11 @@
       {% get_objects 2 as o_posts for blog.post %}
 
       {% for o_page in o_pages %}
-        <a href="{{ o_page.get_absolute_url }}" class="-m-3 p-3 flex flex-col justify-between rounded-lg hover:bg-gray-50">
+        <a href="{{ o_page.get_absolute_url }}" class="-m-3 p-3 flex flex-col justify-between rounded-lg hover:bg-gray-50 dark:hover:bg-gray-700">
           <div class="flex md:h-full lg:flex-col">
             <div class="ml-4 md:flex-1 md:flex md:flex-col md:justify-between lg:ml-0">
               <div>
-                <p class="text-base font-medium text-gray-900">
+                <p class="text-base font-medium text-gray-900 dark:text-gray-200">
                   {{ o_page.title }}
                 </p>
                 <p class="mt-1 text-sm text-gray-500">
@@ -33,11 +33,11 @@
       {% endfor %}
 
       {% for o_post in o_posts %}
-        <a href="{{ o_post.get_absolute_url }}" class="-m-3 p-3 flex flex-col justify-between rounded-lg hover:bg-gray-50">
+        <a href="{{ o_post.get_absolute_url }}" class="-m-3 p-3 flex flex-col justify-between rounded-lg hover:bg-gray-50 dark:hover:bg-gray-700">
           <div class="flex md:h-full lg:flex-col">
             <div class="ml-4 md:flex-1 md:flex md:flex-col md:justify-between lg:ml-0">
               <div>
-                <p class="text-base font-medium text-gray-900">
+                <p class="text-base font-medium text-gray-900 dark:text-gray-200">
                   {{ o_post.title }}
                 </p>
                 <p class="mt-1 text-sm text-gray-500">
