--- a/theme/static_src/src/styles.css
+++ b/theme/static_src/src/styles.css
@@ -19,8 +19,12 @@
         @apply pagination_buttons rounded-l-md;
     }
 
+    .flyout_button {
+        @apply bg-white dark:bg-zinc-800 rounded-md inline-flex items-center text-base font-medium hover:text-gray-900 dark:hover:text-gray-100 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 text-gray-500;
+    }
+
     .flyout_bottom_items {
-        @apply -m-3 p-3 flex items-center rounded-md text-base font-medium text-gray-900 hover:bg-gray-100;
+        @apply -m-3 p-3 flex items-center rounded-md text-base font-medium text-gray-900 dark:text-gray-200 dark:hover:bg-gray-700 hover:bg-gray-100;
     }
 
     .mobile_menu_grid_items {
@@ -136,7 +140,7 @@
         @apply stroke-current fill-current;
     }
 
-    .prose .flyout_bottom_items {
+    .flyout_bottom_items {
         @apply -m-3 p-3 flex items-center rounded-md text-base font-medium text-gray-900 hover:bg-gray-100;
     }
 
