--- a/khoBlog/templates/tailwind/menu_flyout.html
+++ b/khoBlog/templates/tailwind/menu_flyout.html
@@ -1,4 +1,4 @@
-{% load display %}
+{% load links_menu featured_post weblog %}
 
 <div x-data="Components.popover({ open: false, focus: false })" x-init="init()" @keydown.escape="onEscape" @close-popover-group.window="onClosePopoverGroup">
   <button type="button" x-state:on="Item active" x-state:off="Item inactive" class="group flyout_button" :class="{ 'text-gray-900 dark:text-gray-300': open, 'text-gray-500': !(open) }" @click="toggle" @mousedown="if (open) $event.preventDefault()" aria-expanded="false" :aria-expanded="open.toString()">
@@ -8,92 +8,73 @@
     </svg>
   </button>
 
-  <div x-show="open" x-transition:enter="transition ease-out duration-200" x-transition:enter-start="opacity-0 -translate-y-1" x-transition:enter-end="opacity-100 translate-y-0" x-transition:leave="transition ease-in duration-150" x-transition:leave-start="opacity-100 translate-y-0" x-transition:leave-end="opacity-0 -translate-y-1" x-description="'Menu' flyout menu, show/hide based on flyout menu state." class="hidden md:block absolute z-10 top-full inset-x-0 transform shadow-lg bg-white dark:bg-zinc-800" x-ref="panel" @click.away="open = false" style="display: none;">
-    <div class="max-w-7xl mx-auto grid gap-y-10 px-4 py-8 sm:grid-cols-2 sm:gap-x-8 sm:py-12 sm:px-6 lg:px-8 xl:pr-12">
-      {% get_objects 2 as o_pages for pages.page %}
-      {% get_objects 2 as o_posts for blog.post %}
+  <div x-show="open" x-transition:enter="transition ease-out duration-200" x-transition:enter-start="opacity-0 -translate-y-1" x-transition:enter-end="opacity-100 translate-y-0" x-transition:leave="transition ease-in duration-150" x-transition:leave-start="opacity-100 translate-y-0" x-transition:leave-end="opacity-0 -translate-y-1" x-description="'More' flyout menu, show/hide based on flyout menu state." class="hidden md:block absolute z-10 top-full inset-x-0 transform shadow-lg" x-ref="panel" @click.away="open = false" style="display: none;">
+    <div class="relative max-w-7xl mx-auto grid grid-cols-1 lg:grid-cols-2">
+      <nav class="grid gap-y-10 px-4 py-8 bg-white dark:bg-zinc-800 sm:grid-cols-2 sm:gap-x-8 sm:py-12 sm:px-6 lg:px-8 xl:pr-12">
+        <div>
+          <h3 class="text-sm font-medium tracking-wide text-gray-500 dark:text-gray-300 uppercase">
+            Read content
+          </h3>
+          <ul role="list" class="mt-5 space-y-6">
+            {% links_menu_n urls %}
+          </ul>
+        </div>
+        <div>
+          <h3 class="text-sm font-medium tracking-wide text-gray-500 dark:text-gray-300 uppercase">
+            Featured Posts
+          </h3>
+          {% comment %} Either have featured posts here, or latest ones {% endcomment %}
+          {% comment %} Make the From the blog part bigger, but with two columns, one for new posts, one for featured {% endcomment %}
+          <ul role="list" class="mt-5 space-y-6">
+            {% featured_post_list_n urls %}
+          </ul>
+        </div>
+      </nav>
 
-      {% for o_page in o_pages %}
-        <a href="{{ o_page.get_absolute_url }}" class="-m-3 p-3 flex flex-col justify-between rounded-lg hover:bg-gray-50 dark:hover:bg-gray-700">
-          <div class="flex md:h-full lg:flex-col">
-            <div class="ml-4 md:flex-1 md:flex md:flex-col md:justify-between lg:ml-0">
-              <div>
-                <p class="text-base font-medium text-gray-900 dark:text-gray-200">
-                  {{ o_page.title }}
-                </p>
-                <p class="mt-1 text-sm text-gray-500">
-                  {{ o_page.description }}
-                </p>
-              </div>
-              <p class="mt-2 text-sm font-medium text-indigo-600 lg:mt-4">Learn more
-                <span aria-hidden="true">→</span></p>
-            </div>
-          </div>
-        </a>
-      {% endfor %}
-
-      {% for o_post in o_posts %}
-        <a href="{{ o_post.get_absolute_url }}" class="-m-3 p-3 flex flex-col justify-between rounded-lg hover:bg-gray-50 dark:hover:bg-gray-700">
-          <div class="flex md:h-full lg:flex-col">
-            <div class="ml-4 md:flex-1 md:flex md:flex-col md:justify-between lg:ml-0">
-              <div>
-                <p class="text-base font-medium text-gray-900 dark:text-gray-200">
-                  {{ o_post.title }}
-                </p>
-                <p class="mt-1 text-sm text-gray-500">
-                  {{ o_post.description }}
-                </p>
-              </div>
-              <p class="mt-2 text-sm font-medium text-indigo-600 lg:mt-4">Learn more
-                <span aria-hidden="true">→</span></p>
-            </div>
-          </div>
-        </a>
-      {% endfor %}
+      <div class="bg-gray-50 dark:bg-zinc-800 px-4 py-8 sm:py-12 sm:px-6 lg:px-8 xl:pl-12">
+        <div>
+          <h3 class="text-sm font-medium tracking-wide text-gray-500 dark:text-gray-300 uppercase">
+            From the blog
+          </h3>
+          <ul role="list" class="mt-6 space-y-6">
+            {% menu_posts 4 %}
+          </ul>
+        </div>
+        <div class="mt-6 text-sm font-medium">
+          <a href="{% url 'blog:post_archive' %}" class="text-indigo-600 hover:text-indigo-500"> View all posts <span aria-hidden="true">→</span></a>
+        </div>
+      </div>
     </div>
-
     <div class="bg-gray-50 dark:bg-zinc-900">
-      <div class="max-w-7xl mx-auto space-y-6 px-4 py-5 sm:px-6 lg:px-8 xl:pr-12 sm:flex sm:space-y-0 sm:space-x-10">
-        <div class="flow-root">
-          <a href="{% url 'blog:category_list' %}" class="flyout_bottom_items">
-            <svg xmlns="http://www.w3.org/2000/svg" class="flex-shrink-0 h-6 w-6 text-gray-400" fill="none" viewbox="0 0 24 24" stroke="currentColor">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 11H5m14 0a2 2 0 012 2v6a2 2 0 01-2 2H5a2 2 0 01-2-2v-6a2 2 0 012-2m14 0V9a2 2 0 00-2-2M5 11V9a2 2 0 012-2m0 0V5a2 2 0 012-2h6a2 2 0 012 2v2M7 7h10"/>
-            </svg>
-            <span class="ml-3">Categories</span>
-          </a>
-        </div>
-        <div class="flow-root">
-          <a href="{% url 'blog:tag_list' %}" class="flyout_bottom_items">
-            <svg xmlns="http://www.w3.org/2000/svg" class="flex-shrink-0 h-6 w-6 text-gray-400" fill="none" viewbox="0 0 24 24" stroke="currentColor">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 7h.01M7 3h5c.512 0 1.024.195 1.414.586l7 7a2 2 0 010 2.828l-7 7a2 2 0 01-2.828 0l-7-7A1.994 1.994 0 013 12V7a4 4 0 014-4z"/>
-            </svg>
-            <span class="ml-3">Tags</span>
-          </a>
-        </div>
-        <div class="flow-root">
-          <a href="{% url 'blog:series_list' %}" class="flyout_bottom_items">
-            <svg xmlns="http://www.w3.org/2000/svg" class="flex-shrink-0 h-6 w-6 text-gray-400" fill="none" viewbox="0 0 24 24" stroke="currentColor">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.75 17L9 20l-1 1h8l-1-1-.75-3M3 13h18M5 17h14a2 2 0 002-2V5a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"/>
-            </svg>
-            <span class="ml-3">Series</span>
-          </a>
-        </div>
+      <div class="w-full flex flex-wrap gap-4 px-4 py-5">
+        <a href="{% url 'blog:latest' %}" class="flyout_bottom_items">
+          <span>Latest Post</span>
+        </a>
+        <a href="{% url 'blog:random' %}" class="flyout_bottom_items">
+          <span>Random Post</span>
+        </a>
+        <a href="{% url 'blog:weblog' %}" class="flyout_bottom_items">
+          <span>Weblog</span>
+        </a>
         {% if user.is_superuser %}
-          <div class="flow-root">
-            <a href="{% url 'blog:post_draft_list' %}" class="flyout_bottom_items">
-              <span>Drafts</span>
-            </a>
-          </div>
-          <div class="flow-root">
-            <a href="{% url 'blog:post_scheduled_list' %}" class="flyout_bottom_items">
-              <span>Scheduled</span>
-            </a>
-          </div>
-          <div class="flow-root">
-            <a href="{% url 'blog:post_withdrawn_list' %}" class="flyout_bottom_items">
-              <span>Withdrawn</span>
-            </a>
-          </div>
+          <a href="{% url 'blog:create_post' %}" class="flyout_bottom_items">
+            <span>New Post</span>
+          </a>
+          <a href="{% url 'blog:create_series' %}" class="flyout_bottom_items">
+            <span>New Series</span>
+          </a>
+          <a href="{% url 'blog:create_category' %}" class="flyout_bottom_items">
+            <span>New Category</span>
+          </a>
+          <a href="{% url 'blog:post_draft_list' %}" class="flyout_bottom_items">
+            <span>Drafts</span>
+          </a>
+          <a href="{% url 'blog:post_scheduled_list' %}" class="flyout_bottom_items">
+            <span>Scheduled</span>
+          </a>
+          <a href="{% url 'blog:post_withdrawn_list' %}" class="flyout_bottom_items">
+            <span>Withdrawn</span>
+          </a>
         {% endif %}
       </div>
     </div>
