--- a/khoBlog/templates/tailwind/menu_flyout.html
+++ b/khoBlog/templates/tailwind/menu_flyout.html
@@ -31,7 +31,7 @@
         </div>
       </nav>
 
-      <div class="bg-gray-50 dark:bg-zinc-800 px-4 py-8 sm:py-12 sm:px-6 lg:px-8 xl:pl-12">
+      <div class="bg-white dark:bg-zinc-800 px-4 py-8 sm:py-12 sm:px-6 lg:px-8 xl:pl-12">
         <div>
           <h3 class="text-sm font-medium tracking-wide text-gray-500 dark:text-gray-300 uppercase">
             From the blog
@@ -46,7 +46,7 @@
       </div>
     </div>
     <div class="bg-gray-50 dark:bg-zinc-900">
-      <div class="w-full flex flex-wrap gap-4 px-4 py-5">
+      <div class="max-w-7xl mx-auto flex flex-wrap justify-around px-4 py-5">
         <a href="{% url 'blog:latest' %}" class="flyout_bottom_items">
           <span>Latest Post</span>
         </a>
