--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -48,19 +48,19 @@
           </nav>
           <div class="md:flex md:items-center md:justify-between md:space-x-4 xl:border-b xl:pb-6">
             <div>
-              <h1 class="text-2xl font-bold text-gray-900">{{ object.title }}</h1>
+              <h1 class="text-2xl font-bold text-gray-900 dark:text-gray-300">{{ object.title }}</h1>
               <p class="mt-2 text-sm text-gray-500">
                 Post <span class="font-bold">#{{ object.pk }}</span> written by
                 <!-- space -->
-                <a href="{{ object.author.get_absolute_url }}" class="font-medium text-gray-900">{{ object.author }}</a>
+                <a href="{{ object.author.get_absolute_url }}" class="font-medium text-gray-900 dark:text-gray-300">{{ object.author }}</a>
                 <!-- space -->
                 in
                 <!-- space -->
                 {% if object.categories %}
                   {% if object.get_featured_cat %}
-                    <a href="{{ object.get_featured_cat.category.get_absolute_url }}" class="font-medium text-gray-900">{{ object.featured_cat_title }}</a>
+                    <a href="{{ object.get_featured_cat.category.get_absolute_url }}" class="font-medium text-gray-900 dark:text-gray-300">{{ object.featured_cat_title }}</a>
                   {% else %}
-                    <a href="{{ object.categories.first.get_absolute_url }}" class="font-medium text-gray-900">{{ object.categories.first }}</a>
+                    <a href="{{ object.categories.first.get_absolute_url }}" class="font-medium text-gray-900 dark:text-gray-300">{{ object.categories.first }}</a>
                   {% endif %}
                 {% endif %}
               </p>
