--- a/khoBlog/templates/flatpages/default.html
+++ b/khoBlog/templates/flatpages/default.html
@@ -62,7 +62,7 @@
           <div class="xl:col-span-2 xl:pr-8">
             <div class="md:flex md:items-center md:justify-between md:space-x-4 xl:border-b xl:pb-6">
               <div>
-                <h1 class="text-2xl font-bold text-gray-900">{{ page.title }}</h1>
+                <h1 class="text-2xl font-bold text-gray-900 dark:text-gray-300">{{ page.title }}</h1>
                 <p class="mt-2 text-sm text-gray-500">
                   Page <span class="font-bold">#{{ page.pk }}</span>
                 </p>
