--- a/khoBlog/templates/sub_base_main_block.html
+++ b/khoBlog/templates/sub_base_main_block.html
@@ -87,7 +87,17 @@
                 <span class="font-medium">{{ posts.count }}</span>
                 {% if posts %}
                   of
-                  <span class="font-medium">{% o_count posts %}</span>
+                  <span class="font-medium">
+                    {% if not cats.get_superuser_post_count_in_category or not cats.get_post_count_in_category %}
+                      {% o_count posts %}
+                    {% else %}
+                      {% if user.is_superuser %}
+                        {{ cats.get_superuser_post_count_in_category }}
+                      {% else %}
+                        {{ cats.get_post_count_in_category }}
+                      {% endif %}
+                    {% endif %}
+                    </span>
                 {% endif %}
                 results
               </p>
