--- a/khoBlog/templates/tailwind/card_container.html
+++ b/khoBlog/templates/tailwind/card_container.html
@@ -10,6 +10,7 @@
       <p class="text-xl text-gray-500">
         {{ description }}
       </p>
+      {% comment %} Add top page superbuttons (edit if it's a list of posts in a category or tag, maybe user buttons as well) {% endcomment %}
     </div>
   </section>
   <section class="mt-6 pt-10 grid gap-16 lg:grid-cols-2 lg:gap-x-5 lg:gap-y-12">
