--- a/khoBlog/templates/account/profile.html
+++ b/khoBlog/templates/account/profile.html
@@ -189,7 +189,7 @@
             </div>
             <div class="mt-6 sm:flex-1 sm:min-w-0 sm:flex sm:items-center sm:justify-end sm:space-x-6 sm:pb-1">
               <div class="sm:hidden 2xl:block mt-6 min-w-0 flex-1">
-                <h1 class="text-2xl font-bold text-gray-900 truncate">
+                <h1 class="text-2xl font-bold text-gray-900 dark:text-gray-500 truncate">
                   {{ object }}
                 </h1>
               </div>
@@ -205,7 +205,7 @@
             </div>
           </div>
           <div class="hidden sm:block 2xl:hidden mt-6 min-w-0 flex-1">
-            <h1 class="text-2xl font-bold text-gray-900 truncate">
+            <h1 class="text-2xl font-bold text-gray-900 dark:text-gray-500 truncate">
               {{ object }}
             </h1>
           </div>
@@ -215,21 +215,16 @@
       <section x-data="{ tab: 'description' }">
         <!-- Tabs -->
         <div class="mt-6 sm:mt-2 2xl:mt-5">
-          <div class="border-b border-gray-200">
+          <div class="border-b border-gray-200 dark:border-gray-600">
             <div class="max-w-5xl mx-auto px-4 sm:px-6 lg:px-8">
               <nav class="-mb-px flex space-x-8" aria-label="Tabs">
-                <!-- Current: "border-pink-500 text-gray-900", Default: "border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300" -->
-                <button :class="{ 'profile-active-tab': tab === 'description' }" x-on:click.prevent="tab = 'description'" class="whitespace-nowrap py-4 px-1 border-b-2 font-medium text-sm">
+                <button :class="{ 'profile_active_tab': tab === 'description' }" x-on:click.prevent="tab = 'description'" class="profile_tab">
                   Profile
-                </button>
-
-                <button :class="{ 'profile-active-tab': tab === 'comments' }" x-on:click.prevent="tab = 'comments'" class="text-gray-500 hover:text-gray-700 hover:border-gray-300 whitespace-nowrap py-4 px-1 border-b-2 font-medium text-sm">
-                  Comments
                 </button>
 
                 {% get_social_accounts object as accounts %}
                 {% if accounts.github and object.show_github %}
-                  <button :class="{ 'profile-active-tab': tab === 'github' }" x-on:click.prevent="tab = 'github'" class="text-gray-500 hover:text-gray-700 hover:border-gray-300 whitespace-nowrap py-4 px-1 border-b-2 font-medium text-sm">
+                  <button :class="{ 'profile_active_tab': tab === 'github' }" x-on:click.prevent="tab = 'github'" class="profile_tab">
                     Github
                   </button>
                 {% endif %}
@@ -243,10 +238,10 @@
           <dl class="grid grid-cols-1 gap-x-4 gap-y-8 sm:grid-cols-2">
             {% if object.pk == user.pk or user.is_superuser %}
               <div class="sm:col-span-1">
-                <dt class="text-sm font-medium text-gray-500">
+                <dt class="text-sm font-medium text-gray-500 dark:text-gray-100">
                   Email
                 </dt>
-                <dd class="mt-1 text-sm text-gray-900">
+                <dd class="mt-1 text-sm text-gray-900 dark:text-gray-300">
                   {% for emailaddress in object.emailaddress_set.all %}
                     <a href="{% url 'admin:account_emailaddress_change' object_id=emailaddress.id %}">{{ emailaddress }}
                       -
@@ -262,10 +257,10 @@
             {% endif %}
 
             <div class="sm:col-span-1">
-              <dt class="text-sm font-medium text-gray-500">
+              <dt class="text-sm font-medium text-gray-500 dark:text-gray-100">
                 Title
               </dt>
-              <dd class="mt-1 text-sm text-gray-900">
+              <dd class="mt-1 text-sm text-gray-900 dark:text-gray-300">
                 {% if object.roles.last %}
                   {{ object.roles.last }}
                 {% else %}
@@ -285,108 +280,32 @@
             </div>
 
             <div class="sm:col-span-2">
-              <dt class="text-sm font-medium text-gray-500">
+              <dt class="text-sm font-medium text-gray-500 dark:text-gray-100">
                 Bio
               </dt>
-              <dd class="mt-1 max-w-prose text-sm text-gray-900 space-y-5">
+              <dd class="mt-1 max-w-prose text-sm text-gray-900 dark:text-gray-300 space-y-5">
                 <p>{{ object.bio }}</p>
               </dd>
             </div>
           </dl>
         </section>
 
-        <section x-show="tab === 'comments'">
-          <!-- Comments list -->
-          <div class="mt-8 max-w-5xl mx-auto px-4 pb-12 sm:px-6 lg:px-8">
-            <h2 class="text-sm font-medium text-gray-500">Comments</h2>
-            <div class="mt-1 grid grid-cols-1 gap-4 sm:grid-cols-2">
-              <div class="relative rounded-lg border border-gray-300 bg-white px-6 py-5 shadow-sm flex items-center space-x-3 hover:border-gray-400 focus-within:ring-2 focus-within:ring-offset-2 focus-within:ring-pink-500">
-                <div class="flex-shrink-0">
-                  <img class="h-10 w-10 rounded-full" src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="">
-                </div>
-                <div class="flex-1 min-w-0">
-                  <a href="#" class="focus:outline-none">
-                    <span class="absolute inset-0" aria-hidden="true"></span>
-                    <p class="text-sm font-medium text-gray-900">
-                      Leslie Alexander
-                    </p>
-                    <p class="text-sm text-gray-500 truncate">
-                      Co-Founder / CEO
-                    </p>
-                  </a>
-                </div>
-              </div>
-
-              <div class="relative rounded-lg border border-gray-300 bg-white px-6 py-5 shadow-sm flex items-center space-x-3 hover:border-gray-400 focus-within:ring-2 focus-within:ring-offset-2 focus-within:ring-pink-500">
-                <div class="flex-shrink-0">
-                  <img class="h-10 w-10 rounded-full" src="https://images.unsplash.com/photo-1519244703995-f4e0f30006d5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="">
-                </div>
-                <div class="flex-1 min-w-0">
-                  <a href="#" class="focus:outline-none">
-                    <span class="absolute inset-0" aria-hidden="true"></span>
-                    <p class="text-sm font-medium text-gray-900">
-                      Michael Foster
-                    </p>
-                    <p class="text-sm text-gray-500 truncate">
-                      Co-Founder / CTO
-                    </p>
-                  </a>
-                </div>
-              </div>
-
-              <div class="relative rounded-lg border border-gray-300 bg-white px-6 py-5 shadow-sm flex items-center space-x-3 hover:border-gray-400 focus-within:ring-2 focus-within:ring-offset-2 focus-within:ring-pink-500">
-                <div class="flex-shrink-0">
-                  <img class="h-10 w-10 rounded-full" src="https://images.unsplash.com/photo-1506794778202-cad84cf45f1d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="">
-                </div>
-                <div class="flex-1 min-w-0">
-                  <a href="#" class="focus:outline-none">
-                    <span class="absolute inset-0" aria-hidden="true"></span>
-                    <p class="text-sm font-medium text-gray-900">
-                      Dries Vincent
-                    </p>
-                    <p class="text-sm text-gray-500 truncate">
-                      Manager, Business Relations
-                    </p>
-                  </a>
-                </div>
-              </div>
-
-              <div class="relative rounded-lg border border-gray-300 bg-white px-6 py-5 shadow-sm flex items-center space-x-3 hover:border-gray-400 focus-within:ring-2 focus-within:ring-offset-2 focus-within:ring-pink-500">
-                <div class="flex-shrink-0">
-                  <img class="h-10 w-10 rounded-full" src="https://images.unsplash.com/photo-1517841905240-472988babdf9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="">
-                </div>
-                <div class="flex-1 min-w-0">
-                  <a href="#" class="focus:outline-none">
-                    <span class="absolute inset-0" aria-hidden="true"></span>
-                    <p class="text-sm font-medium text-gray-900">
-                      Lindsay Walton
-                    </p>
-                    <p class="text-sm text-gray-500 truncate">
-                      Front-end Developer
-                    </p>
-                  </a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </section>
-
         {% if accounts.github and object.show_github %}
           <section x-show="tab === 'github'">
             <div class="mt-8 max-w-5xl mx-auto px-4 pb-12 sm:px-6 lg:px-8">
-              <h2 class="text-sm font-medium text-gray-500">Github account</h2>
+              <h2 class="text-sm font-medium text-gray-500 dark:text-gray-300">Github account</h2>
               {% for github in accounts.github %}
-                <div class="relative rounded-lg border border-gray-300 bg-white px-6 py-5 shadow-sm flex items-center space-x-3 hover:border-gray-400 focus-within:ring-2 focus-within:ring-offset-2 focus-within:ring-pink-500">
+                <div class="relative rounded-lg border border-gray-300 dark:border-gray-500 bg-white dark:bg-gray-700 px-6 py-5 shadow-sm flex items-center space-x-3 hover:border-gray-400 dark:hover:border-gray-600 focus-within:ring-2 focus-within:ring-offset-2 focus-within:ring-pink-500">
                   <div class="flex-shrink-0">
                     <img class="h-10 w-10 rounded-full" src="{{ github.extra_data.avatar_url }}" loading="lazy" alt="User's Github account's profile picture">
                   </div>
                   <div class="flex-1 min-w-0">
                     <a href="{{ github.extra_data.html_url }}" class="focus:outline-none" target="_blank">
                       <span class="absolute inset-0" aria-hidden="true"></span>
-                      <p class="text-sm font-medium text-gray-900">
+                      <p class="text-sm font-medium text-gray-900 dark:text-gray-300">
                         {{ github.extra_data.login }}
                       </p>
-                      <p class="text-sm text-gray-500 truncate">
+                      <p class="text-sm text-gray-500 dark:text-gray-200 truncate">
                         {{ github.extra_data.bio }}
                       </p>
                     </a>
