--- a/theme/static_src/src/styles.css
+++ b/theme/static_src/src/styles.css
@@ -31,12 +31,32 @@
         @apply rounded-md text-base font-medium text-gray-900 hover:text-gray-700 dark:text-gray-200;
     }
 
-    .profile-active-tab {
-        @apply border-pink-500 text-gray-900;
+    .profile_tab {
+        @apply text-gray-500 hover:text-gray-700 dark:text-gray-100 hover:border-gray-300 dark:hover:border-gray-500 whitespace-nowrap py-4 px-1 border-b-2 font-medium text-sm;
     }
 
-    :not(profile-active-tab) {
+    .profile_active_tab {
+        @apply border-pink-500 text-gray-900 dark:text-gray-300;
+    }
+
+    :not(profile_active_tab) {
         @apply border-transparent;
+    }
+
+    .superbutton_base {
+        @apply relative inline-flex items-center py-2 border border-gray-300 bg-white dark:bg-gray-700 dark:border-gray-600 text-sm font-medium text-gray-700 dark:text-gray-200 dark:hover:bg-gray-800 hover:bg-gray-50 focus:z-10 focus:outline-none focus:ring-1 focus:ring-indigo-500 focus:border-indigo-500;
+    }
+
+    .superbutton_main_action {
+        @apply superbutton_base px-4 rounded-l-md;
+    }
+
+    .superbutton_dropdown_button {
+        @apply superbutton_base px-2 rounded-r-md;
+    }
+
+    .superbutton_dropdown_items {
+        @apply origin-top-right absolute right-0 mt-2 w-56 rounded-md shadow-lg bg-white dark:bg-gray-700 dark:border-gray-600 dark:text-gray-200 ring-1 ring-black ring-opacity-5 divide-y divide-gray-100 dark:divide-gray-600 focus:outline-none;
     }
 
     .prose .tabbed-set {
