--- a/khoBlog/templates/tailwind/base.html
+++ b/khoBlog/templates/tailwind/base.html
@@ -126,7 +126,7 @@
 
     {% include 'tailwind/menu.html' %}
 
-    <main class="bg-white dark:bg-zinc-800 pt-8 pb-12 lg:pt-16 lg:pb-20">
+    <main class="bg-white dark:bg-martinique-800 pt-8 pb-12 lg:pt-16 lg:pb-20">
       <section class="max-w-7xl mx-auto flex justify-end px-4 2xl:px-0">
         <input type="checkbox" name="" id="darkLightd" class="switch hidden md:flex -mt-6 lg:-mt-14 h-6 w-11 border-2 border-transparent rounded-full cursor-pointer transition-colors ease-in-out duration-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 bg-gray-200" />
         <label for="darkLightd" class="cursor-pointer sr-only"></label>
@@ -138,16 +138,16 @@
       </section>
     </main>
 
-    <footer class="bg-white/75 dark:bg-zinc-800/95">
+    <footer class="bg-white dark:bg-martinique-800">
       <div class="max-w-7xl mx-auto py-12 px-4 overflow-hidden sm:px-6 lg:px-8">
         <nav class="-mx-5 -my-2 flex flex-wrap justify-center" aria-label="Footer">
           <div class="px-5 py-2">
-            <a href="{% url 'pages:about' %}" class="text-base text-gray-500 hover:text-gray-900 dark:hover:text-gray-100">
+            <a href="{% url 'pages:about' %}" class="text-base text-gray-500 hover:text-gray-900 dark:hover:text-martinique-100">
               About
             </a>
           </div>
           <div class="px-5 py-2">
-            <a href="{% url 'blog:post_archive' %}" class="text-base text-gray-500 hover:text-gray-900 dark:hover:text-gray-100">
+            <a href="{% url 'blog:post_archive' %}" class="text-base text-gray-500 hover:text-gray-900 dark:hover:text-martinique-100">
               Blog
             </a>
           </div>
