--- a/khoBlog/templates/tailwind/cards.html
+++ b/khoBlog/templates/tailwind/cards.html
@@ -20,22 +20,22 @@
   {% endif %}
   <section>
     <a href="{{ object.get_absolute_url }}" class="mt-2 block">
-      <p class="text-lg font-bold text-gray-900 dark:text-gray-200">
+      <p class="text-lg font-bold text-martinique-900 dark:text-martinique-200">
         {{ object }}
       </p>
     </a>
-    <p class="text-sm text-gray-500">
+    <p class="text-sm dark:text-martinique-500">
       {% comment %} {% endcomment %}
       <time datetime="{{ object.pub_date|date:"c" }}">
         {{ object.pub_date|date:"Y\-m\-d" }}
       </time>
     </p>
-    <p class="mt-3 text-base text-gray-500">
+    <p class="mt-3 text-base dark:text-martinique-500">
       {{ object.description }}
     </p>
   </section>
   <section class="mt-3">
-    <a href="{{ object.get_absolute_url }}" class="text-base font-semibold text-indigo-600 hover:text-indigo-500">
+    <a href="{{ object.get_absolute_url }}" class="text-base font-semibold text-indigo-600 hover:text-indigo-500 dark:text-martinique-200 dark:hover:text-martinique-300">
       Read the post
     </a>
   </section>
