--- a/khoBlog/templates/tailwind/facts_flyout.html
+++ b/khoBlog/templates/tailwind/facts_flyout.html
@@ -1,14 +1,14 @@
 {% load display markup_tags %}
 
 <div x-data="Components.popover({ open: false, focus: false })" x-init="init()" @keydown.escape="onEscape" @close-popover-group.window="onClosePopoverGroup">
-  <button type="button" x-state:on="Item active" x-state:off="Item inactive" class="group flyout_button" :class="{ 'text-gray-900 dark:text-gray-300': open, 'text-gray-500': !(open) }" @click="toggle" @mousedown="if (open) $event.preventDefault()" aria-expanded="false" :aria-expanded="open.toString()">
+  <button type="button" x-state:on="Item active" x-state:off="Item inactive" class="group flyout_button" :class="{ 'text-gray-900 dark:text-martinique-300': open, 'text-gray-500': !(open) }" @click="toggle" @mousedown="if (open) $event.preventDefault()" aria-expanded="false" :aria-expanded="open.toString()">
     <span>Facts</span>
     <svg x-state:on="Item active" x-state:off="Item inactive" class="ml-2 h-5 w-5 group-hover:text-gray-500 text-gray-400" :class="{ 'text-gray-600': open, 'text-gray-400': !(open) }" x-description="Heroicon name: solid/chevron-down" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 20 20" fill="currentColor" aria-hidden="true">
       <path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd"></path>
     </svg>
   </button>
 
-  <div x-show="open" x-transition:enter="transition ease-out duration-200" x-transition:enter-start="opacity-0 -translate-y-1" x-transition:enter-end="opacity-100 translate-y-0" x-transition:leave="transition ease-in duration-150" x-transition:leave-start="opacity-100 translate-y-0" x-transition:leave-end="opacity-0 -translate-y-1" x-description="'Menu' flyout menu, show/hide based on flyout menu state." class="hidden md:block absolute z-10 top-full inset-x-0 transform shadow-lg bg-white dark:bg-zinc-800" x-ref="panel" @click.away="open = false" style="display: none;">
+  <div x-show="open" x-transition:enter="transition ease-out duration-200" x-transition:enter-start="opacity-0 -translate-y-1" x-transition:enter-end="opacity-100 translate-y-0" x-transition:leave="transition ease-in duration-150" x-transition:leave-start="opacity-100 translate-y-0" x-transition:leave-end="opacity-0 -translate-y-1" x-description="'Menu' flyout menu, show/hide based on flyout menu state." class="hidden md:block absolute z-10 top-full inset-x-0 transform shadow-lg bg-white dark:bg-martinique-800" x-ref="panel" @click.away="open = false" style="display: none;">
     <div class="max-w-7xl mx-auto grid gap-y-10 px-4 py-8 sm:grid-cols-2 sm:gap-x-8 sm:py-12 sm:px-6 lg:px-8 xl:pr-12">
       {% get_objects 10 as o_facts for facts.fact %}
 
@@ -16,20 +16,20 @@
         <article id="{{ o_fact.slug }}">
           {% if o_fact.link %}
             {% if o_fact.link.permalink %}
-              <a href="{{ o_fact.link.permalink }}" class="-m-3 p-3 flex flex-col justify-between rounded-lg hover:bg-gray-50 dark:hover:bg-gray-700">
+              <a href="{{ o_fact.link.permalink }}" class="-m-3 p-3 flex flex-col justify-between rounded-lg hover:bg-gray-50 dark:hover:bg-martinique-700">
               {% comment %} {% endcomment %}
             {% else %}
-              <a href="{{ o_fact.link.content_object.get_absolute_url }}" class="-m-3 p-3 flex flex-col justify-between rounded-lg hover:bg-gray-50 dark:hover:bg-gray-700">
+              <a href="{{ o_fact.link.content_object.get_absolute_url }}" class="-m-3 p-3 flex flex-col justify-between rounded-lg hover:bg-gray-50 dark:hover:bg-martinique-700">
               {% comment %} {% endcomment %}
             {% endif %}
           {% endif %}
             <div class="flex md:h-full lg:flex-col">
               <div class="ml-4 md:flex-1 md:flex md:flex-col md:justify-between lg:ml-0">
                 <div>
-                  <p class="font-medium text-gray-900 dark:text-gray-200">
+                  <p class="font-medium text-gray-900 dark:text-martinique-200">
                     {{ o_fact.title }}
                   </p>
-                  <div class="prose prose-gray dark:prose-invert">
+                  <div class="prose prose-gray dark:prose-martinique dark:prose-invert">
                     {{ o_fact.fact|apply_markup:"markdown"|apply_markup:"widont" }}
                   </div>
                 </div>
