--- a/khoBlog/templates/tailwind/menu_posts.html
+++ b/khoBlog/templates/tailwind/menu_posts.html
@@ -1,11 +1,11 @@
 {% for object in entries %}
   <li class="flow-root">
-    <a href="{{ object.get_absolute_url }}" class="-m-3 p-3 flex rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700 transition ease-in-out duration-150">
+    <a href="{{ object.get_absolute_url }}" class="-m-3 p-3 flex rounded-lg hover:bg-gray-100 dark:hover:bg-martinique-700 transition ease-in-out duration-150">
       <div class="min-w-0 flex-1">
-        <h4 class="text-base font-medium text-gray-900 dark:text-gray-200 truncate">
+        <h4 class="text-base font-medium text-gray-900 dark:text-martinique-200 truncate">
           {{ object.title }}
         </h4>
-        <p class="mt-1 text-sm text-gray-500 dark:text-gray-300">
+        <p class="mt-1 text-sm text-gray-500 dark:text-martinique-300">
           {{ object.description }}
         </p>
       </div>
