--- a/theme/static_src/src/styles.css
+++ b/theme/static_src/src/styles.css
@@ -35,11 +35,11 @@
         @apply text-gray-500 hover:text-gray-700 dark:text-martinique-100 hover:border-gray-300 dark:hover:border-martinique-500 whitespace-nowrap py-4 px-1 border-b-2 font-medium text-sm;
     }
 
-    .profile_active_tab {
+    .profile_tab.profile_active_tab {
         @apply border-pink-500 text-gray-900 dark:text-martinique-300;
     }
 
-    :not(profile_active_tab) {
+    .profile_tab:not(.profile_active_tab) {
         @apply border-transparent;
     }
 
